--- a/styles/lightswitch.module.css
+++ b/styles/lightswitch.module.css
@@ -1,7 +1,20 @@
 .Wrapper {
   position: absolute;
-  top: 1rem;
+  top: calc(100vh - 18rem);
   right: 2rem;
+}
+
+@media (min-width: 26em) {
+  .Wrapper {
+    top: calc(100vh - 13rem);
+  }
+}
+
+@media (min-width: 42em) {
+  .Wrapper {
+    top: 0.5rem;
+    right: 0.5rem;
+  }
 }
 
 .Toggle {
